force-app/main/default/objects/CommercientSF__SorDetailRep__c/CommercientSF__SorDetailRep__c.object-meta.xml
<CustomObject>
    <description>Syspro SorDetailRep table.</description>
    <label>Syspro Sales Order Detail Line</label>
    <nameField>
        <label>Syspro Sales Order Detail Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Sales Order Detail Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>