force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/abcapplied__c.field-meta.xml
<CustomField>
    <fullName>abcapplied__c</fullName>
    <label>AbcApplied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>