force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/allocstatussched__c.field-meta.xml
<CustomField>
    <fullName>allocstatussched__c</fullName>
    <label>AllocStatusSched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>