force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Amount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Amount__c</fullName>
    <formula>CommercientSF__Price__c  *  CommercientSF__ShipQty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>