force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__AmountTaxFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AmountTaxFlag__c</fullName>
    <label>Is this amount tax flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>