force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__BackOrderQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BackOrderQty__c</fullName>
    <label>Quantity on back order</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>