force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__BomFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BomFlag__c</fullName>
    <label>Bill of materials flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>