force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__BuyingGroup__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BuyingGroup__c</fullName>
    <label>Buying group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>