force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Comment__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Comment__c</fullName>
    <label>Comment description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>