force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CommentFromLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommentFromLine__c</fullName>
    <label>Comment is associated with</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>