force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CommentType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommentType__c</fullName>
    <label>Comment type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>