force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CommissionCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionCode__c</fullName>
    <label>Commission code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>