force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__ComponentSeqNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ComponentSeqNum__c</fullName>
    <label>Sequence number of component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>