force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Contract__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Contract__c</fullName>
    <label>Contract number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>