force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__ConvFactorAlloc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ConvFactorAlloc__c</fullName>
    <label>Conversion factor</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>