force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CreditOrderLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditOrderLine__c</fullName>
    <label>Order line number that credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>