force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CreditOrderNo__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditOrderNo__c</fullName>
    <label>Order number that credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>