force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CreditReason__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditReason__c</fullName>
    <label>Reason for credit note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>