force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CustRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustRequestDate__c</fullName>
    <label>Customer request date</label>
    <type>Date</type>
</CustomField>