force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CustRetailPrice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustRetailPrice__c</fullName>
    <label>CustRetailPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>