force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__CustSupStkCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustSupStkCode__c</fullName>
    <label>Customer&apos;s stock code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>