force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__DelNotePrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DelNotePrinted__c</fullName>
    <label>Print line on delivery note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>