force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__DiscChanged__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscChanged__c</fullName>
    <label>Line discount changed manually</label>
    <length>255</length>
    <type>Text</type>
</CustomField>