force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__DiscPct3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscPct3__c</fullName>
    <label>3rd line discount percentage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>