force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__DiscValFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DiscValFlag__c</fullName>
    <label>Discount flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>