force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__HierarchyJob__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__HierarchyJob__c</fullName>
    <label>Hierarchical job number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>