force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Invoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Invoice__c</fullName>
    <label>Invoice number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>