force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__InvoicePrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoicePrinted__c</fullName>
    <label>Print line on invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>