force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__LeadTime__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LeadTime__c</fullName>
    <label>Lead time between ship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>