force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__LineReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineReceiptDate__c</fullName>
    <label>Line receipt date</label>
    <type>Date</type>
</CustomField>