force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__LineShipDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineShipDate__c</fullName>
    <label>Detail line ship date</label>
    <type>Date</type>
</CustomField>