force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MAltUomUnitQ__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MAltUomUnitQ__c</fullName>
    <label>Unit of measure for pieces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>