force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MConvFactUnitQ__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MConvFactUnitQ__c</fullName>
    <label>Conversion factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>