force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MEccFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MEccFlag__c</fullName>
    <label>ECC flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>