force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MovementReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MovementReqd__c</fullName>
    <label>Inventory movement required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>