force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MpsGrossReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MpsGrossReqd__c</fullName>
    <label>Master Production Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>