force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MRelease__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MRelease__c</fullName>
    <label>Release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>