force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscChargeCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscChargeCost__c</fullName>
    <label>Miscellaneous charges cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>