force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscChargeQty__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscChargeQty__c</fullName>
    <label>Miscellaneous charge quantity</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>