force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscChargeValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscChargeValue__c</fullName>
    <label>Miscellaneous charges value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>