force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscFstCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscFstCode__c</fullName>
    <label>Federal sales tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>