force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscInvCharge__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscInvCharge__c</fullName>
    <label>Invoiced charge flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>