force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscProductClass__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscProductClass__c</fullName>
    <label>Product class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>