force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MscTaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MscTaxCode__c</fullName>
    <label>Tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>