force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MulDivA__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MulDivA__c</fullName>
    <label>Quantity factor code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>