force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MulDivC__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MulDivC__c</fullName>
    <label>Pricing factor code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>