force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MUnitQuantity__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MUnitQuantity__c</fullName>
    <label>Unit quantity stock code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>