force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__MVersion__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MVersion__c</fullName>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>