force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__OrdAcknwPrinted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrdAcknwPrinted__c</fullName>
    <label>Print line on acknowledgement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>