force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__OrderUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderUom__c</fullName>
    <label>Unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>