force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__ParentKitType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ParentKitType__c</fullName>
    <label>Kit type of parent part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>