force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__PickingSlipPrted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PickingSlipPrted__c</fullName>
    <label>Picking slip print status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>