force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Price__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>