force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__PriceUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PriceUom__c</fullName>
    <label>Pricing unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>