force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__PrintComponent__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrintComponent__c</fullName>
    <label>Print component line flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>