force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__PromotionCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PromotionCode__c</fullName>
    <label>TPM Promotion code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>