force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__QtyAlreadyCredited__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyAlreadyCredited__c</fullName>
    <label>Quantity already credited</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>