force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__QtyDispatched__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyDispatched__c</fullName>
    <label>Quantity dispatched</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>