force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__QtyPer__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__QtyPer__c</fullName>
    <label>Component unit quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>