force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__ReviewFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReviewFlag__c</fullName>
    <label>Review flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>