force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReviewStatus__c</fullName>
    <label>Review status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>