force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SalesOrderInitLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrderInitLine__c</fullName>
    <label>Initial line number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>