force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SalesOrderLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrderLine__c</fullName>
    <label>Line number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>