force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__ScrapPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ScrapPercentage__c</fullName>
    <label>Scrap percentage of</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>