force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SerialMethod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SerialMethod__c</fullName>
    <label>Serial tracking method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>