force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Source__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Source__c</fullName>
    <formula>IF(   CommercientSF__Invoice__c  == &apos;_&apos; || CommercientSF__Invoice__c  == &apos;Disp&apos; , &apos;SorDetail&apos;, &apos;SorDetailRep&apos;)</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>