force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SrvApplyFactor__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SrvApplyFactor__c</fullName>
    <label>Apply quantity factor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>