force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SrvChargeType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SrvChargeType__c</fullName>
    <label>Service charge type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>