force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SrvIncTotal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SrvIncTotal__c</fullName>
    <label>Include service charge in</label>
    <length>255</length>
    <type>Text</type>
</CustomField>