force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SrvQtyFactor__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SrvQtyFactor__c</fullName>
    <label>Qty factor to be applied</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>