force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SrvSummary__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SrvSummary__c</fullName>
    <label>Summarise the service charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>