force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__SrvUnitCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SrvUnitCost__c</fullName>
    <label>Unit cost for service charge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>