force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__StockDescription__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockDescription__c</fullName>
    <label>Stock description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>