force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__StockingUom__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockingUom__c</fullName>
    <label>Stocking unit of measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>