force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__StockQtyToShip__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StockQtyToShip__c</fullName>
    <label>Stocking quantity to ship</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>