force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__Syspro_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Invoice</label>
    <referenceTo>CommercientSF__ArInvoice__c</referenceTo>
    <relationshipLabel>Syspro Sales Order Detail Lines</relationshipLabel>
    <relationshipName>Syspro_Sales_Order_Detail_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>