force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__TariffCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TariffCode__c</fullName>
    <label>Tariff code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>