force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__TextType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TextType__c</fullName>
    <label>Blank - normal comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>