force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__TpmSequence__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TpmSequence__c</fullName>
    <label>TPM Promotion sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>