force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__TpmUsageFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TpmUsageFlag__c</fullName>
    <label>Line is used by TPM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>