force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__TraceableType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TraceableType__c</fullName>
    <label>Traceability flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>