force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__User1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__User1__c</fullName>
    <label>User defined field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>