force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/CommercientSF__UserDef__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserDef__c</fullName>
    <label>User-defined field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>