force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/fixedqtyper__c.field-meta.xml
<CustomField>
    <fullName>fixedqtyper__c</fullName>
    <label>FixedQtyPer</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>