force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/fixedqtyperflag__c.field-meta.xml
<CustomField>
    <fullName>fixedqtyperflag__c</fullName>
    <label>FixedQtyPerFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>