force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/lastdelnote__c.field-meta.xml
<CustomField>
    <fullName>lastdelnote__c</fullName>
    <label>LastDelNote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>