force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/librarycode__c.field-meta.xml
<CustomField>
    <fullName>librarycode__c</fullName>
    <label>LibraryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>