force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/materialallocline__c.field-meta.xml
<CustomField>
    <fullName>materialallocline__c</fullName>
    <label>MaterialAllocLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>