force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/mcommitdate__c.field-meta.xml
<CustomField>
    <fullName>mcommitdate__c</fullName>
    <label>MCommitDate</label>
    <type>DateTime</type>
</CustomField>