force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/mdecimalsunitq__c.field-meta.xml
<CustomField>
    <fullName>mdecimalsunitq__c</fullName>
    <label>MDecimalsUnitQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>