force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/mpsflag__c.field-meta.xml
<CustomField>
    <fullName>mpsflag__c</fullName>
    <label>MpsFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>