force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/nchargecode__c.field-meta.xml
<CustomField>
    <fullName>nchargecode__c</fullName>
    <label>NChargeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>