force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/ndepretflagproj__c.field-meta.xml
<CustomField>
    <fullName>ndepretflagproj__c</fullName>
    <label>NDepRetFlagProj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>