force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/nretentionjob__c.field-meta.xml
<CustomField>
    <fullName>nretentionjob__c</fullName>
    <label>NRetentionJob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>