force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/nsrvminquantity__c.field-meta.xml
<CustomField>
    <fullName>nsrvminquantity__c</fullName>
    <label>NSrvMinQuantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>