force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/origshipdateaps__c.field-meta.xml
<CustomField>
    <fullName>origshipdateaps__c</fullName>
    <label>OrigShipDateAps</label>
    <type>DateTime</type>
</CustomField>