force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/preactorpriority__c.field-meta.xml
<CustomField>
    <fullName>preactorpriority__c</fullName>
    <label>PreactorPriority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>