force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/productcode__c.field-meta.xml
<CustomField>
    <fullName>productcode__c</fullName>
    <label>ProductCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>