force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/prtonack__c.field-meta.xml
<CustomField>
    <fullName>prtonack__c</fullName>
    <label>PrtOnAck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>