force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/prtondel__c.field-meta.xml
<CustomField>
    <fullName>prtondel__c</fullName>
    <label>PrtOnDel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>