force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/prtoninv__c.field-meta.xml
<CustomField>
    <fullName>prtoninv__c</fullName>
    <label>PrtOnInv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>