force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/salesorderdetstat__c.field-meta.xml
<CustomField>
    <fullName>salesorderdetstat__c</fullName>
    <label>SalesOrderDetStat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>