force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/scrapquantity__c.field-meta.xml
<CustomField>
    <fullName>scrapquantity__c</fullName>
    <label>ScrapQuantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>