force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/srvdecimalrnd__c.field-meta.xml
<CustomField>
    <fullName>srvdecimalrnd__c</fullName>
    <label>SrvDecimalRnd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>