force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/srvdecrndflag__c.field-meta.xml
<CustomField>
    <fullName>srvdecrndflag__c</fullName>
    <label>SrvDecRndFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>