force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/srvmaxvalue__c.field-meta.xml
<CustomField>
    <fullName>srvmaxvalue__c</fullName>
    <label>SrvMaxValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>