force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/srvminvalue__c.field-meta.xml
<CustomField>
    <fullName>srvminvalue__c</fullName>
    <label>SrvMinValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>