force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/srvmuldiv__c.field-meta.xml
<CustomField>
    <fullName>srvmuldiv__c</fullName>
    <label>SrvMulDiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>