force-app/main/default/objects/CommercientSF__SorDetailRep__c/fields/stockingunitmass__c.field-meta.xml
<CustomField>
    <fullName>stockingunitmass__c</fullName>
    <label>StockingUnitMass</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>